# pharmacy-inventory-system

./: .gitignore  CMakeLists.txt  README.md
api/: app.py  predictor.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/LandingPage/: LandingPage.css  LandingPage.js
frontend/src/components/: AnalyticsPanel.js  MedicationTable.js  OrdersPanel.js  PredictionsPanel.js  ShipmentsPanel.js  Sidebar.js  StatsBar.js  ToastContainer.js
include/: DatabaseManager.h  Inventory.h  Medication.h
src/: DatabaseManager.cpp  Inventory.cpp  Medication.cpp  main.cpp
